# wasm-clap-browserhost

./: .gitignore  .gitmodules  Makefile  Notes.md  README.md  audioworkletnode-clap.mjs  audioworkletprocessor-clap.mjs  cbor.mjs  host.wasm  index.html  inspect.html  page-proxy-service-worker.js  wasi.wasm  wclap-host.wasm  wclap-service-worker.js
clap-audionode/: clap-audionode.mjs  clap-audioworkletprocessor.mjs  host-imports.mjs  host.wasm
clap-audionode/host-dev/: CMakeLists.txt  host.cpp
clap-audionode/host-dev/source/: cbor-bytes.h  cbor-value.cpp  cbor-value.h  common.h  host.cpp  hosted-plugin.h  hosted-wclap.h
clap-host/: clap-interface.mjs  clap-module.mjs  generate-forwarding-wasm.mjs  hosted-plugin.mjs  instantiate.mjs
clap-host/ext/: add-extension.mjs  audio-ports.mjs  log.mjs  params.mjs  state.mjs  webview.mjs
clap-host/wasi/: wasi.mjs  wasi_snapshot_preview1.mjs
clap-js/: clap.mjs  host.mjs  wasi.mjs  wclap-host.mjs  wclap.mjs  wclap32.js  wclap32.mjs
clap-js/dev/: CMakeLists.txt  Makefile  browser-wasm-instance.h  host.cpp
clap-js/generate/: Makefile  generate.js  wasi.cpp  wclap32.json
clap-js/wasi/: wasm32.wasm
host-dev/: CMakeLists.txt  Makefile  host.cpp  wasi.cpp  wclap-instance-js.cpp  wclap-instance-js.h
plugin/clap-validator-plugin.wclap/: module.wasm
plugin/hello-clap/: hello-clap.wasm
plugin/hello-clap.wasm-clap/: module.wasm  ui.html
wclap-js/: wasi.mjs  wasi.wasm  wclap-host.mjs  wclap.mjs
wclap-js-cpp/: CMakeLists.txt  wclap-js-instance.cpp  wclap-js-instance.h
wclap-js/wasi-dev/: CMakeLists.txt  Makefile  wasi.cpp
